// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SmartBarTab /> Should handle empty items 1`] = `
<div
  className="tabs__tab tabs__tab--has-items-1"
>
  <input
    checked={false}
    className="tab__input"
    disabled={false}
    id="Students"
    name="tabs2"
    onChange={[Function]}
    type="checkbox"
  />
  <React.Fragment>
    <label
      className="tab__label"
      htmlFor="Students"
    >
      Students
    </label>
    <div
      className="tab__content"
    >
      <ul
        className="tab__list"
      >
        <li
          className="tab__list-item"
        >
          <div
            className="tab__list-text"
          >
            (No Items)
          </div>
        </li>
      </ul>
    </div>
  </React.Fragment>
</div>
`;

exports[`<SmartBarTab /> Should handle lots of items 1`] = `
<div
  className="tabs__tab tabs__tab--active tabs__tab--has-many-items"
>
  <input
    checked={true}
    className="tab__input"
    disabled={false}
    id="Students"
    name="tabs2"
    onChange={[Function]}
    type="checkbox"
  />
  <React.Fragment>
    <label
      className="tab__label"
      htmlFor="Students"
    >
      Students
    </label>
    <div
      className="tab__content"
    >
      <ul
        className="tab__list"
      >
        <li
          className="tab__list-item"
          key="0"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 0
          </div>
        </li>
        <li
          className="tab__list-item"
          key="1"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 1
          </div>
        </li>
        <li
          className="tab__list-item"
          key="2"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 2
          </div>
        </li>
        <li
          className="tab__list-item"
          key="3"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 3
          </div>
        </li>
        <li
          className="tab__list-item"
          key="4"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 4
          </div>
        </li>
        <li
          className="tab__list-item"
          key="5"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 5
          </div>
        </li>
        <li
          className="tab__list-item"
          key="6"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 6
          </div>
        </li>
        <li
          className="tab__list-item"
          key="7"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 7
          </div>
        </li>
        <li
          className="tab__list-item"
          key="8"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 8
          </div>
        </li>
        <li
          className="tab__list-item"
          key="9"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 9
          </div>
        </li>
        <li
          className="tab__list-item"
          key="10"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 10
          </div>
        </li>
        <li
          className="tab__list-item"
          key="11"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 11
          </div>
        </li>
        <li
          className="tab__list-item"
          key="12"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 12
          </div>
        </li>
        <li
          className="tab__list-item"
          key="13"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 13
          </div>
        </li>
        <li
          className="tab__list-item"
          key="14"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 14
          </div>
        </li>
        <li
          className="tab__list-item"
          key="15"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 15
          </div>
        </li>
        <li
          className="tab__list-item"
          key="16"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 16
          </div>
        </li>
        <li
          className="tab__list-item"
          key="17"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 17
          </div>
        </li>
        <li
          className="tab__list-item"
          key="18"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 18
          </div>
        </li>
        <li
          className="tab__list-item"
          key="19"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 19
          </div>
        </li>
        <li
          className="tab__list-item"
          key="20"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 20
          </div>
        </li>
        <li
          className="tab__list-item"
          key="21"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 21
          </div>
        </li>
        <li
          className="tab__list-item"
          key="22"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 22
          </div>
        </li>
        <li
          className="tab__list-item"
          key="23"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 23
          </div>
        </li>
        <li
          className="tab__list-item"
          key="24"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 24
          </div>
        </li>
      </ul>
    </div>
  </React.Fragment>
</div>
`;

exports[`<SmartBarTab /> Should handle no items 1`] = `
<div
  className="tabs__tab"
>
  <input
    checked={false}
    className="tab__input"
    disabled={true}
    id="Students"
    name="tabs2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="tab__label"
    htmlFor="Students"
  >
    Students
  </label>
</div>
`;

exports[`<SmartBarTab /> Should render as expected 1`] = `
<div
  className="tabs__tab tabs__tab--has-items-2"
>
  <input
    checked={false}
    className="tab__input"
    disabled={false}
    id="Students"
    name="tabs2"
    onChange={[Function]}
    type="checkbox"
  />
  <React.Fragment>
    <label
      className="tab__label"
      htmlFor="Students"
    >
      Students
    </label>
    <div
      className="tab__content"
    >
      <ul
        className="tab__list"
      >
        <li
          className="tab__list-item"
          key="1"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 1
          </div>
        </li>
        <li
          className="tab__list-item"
          key="2"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 2
          </div>
        </li>
      </ul>
    </div>
  </React.Fragment>
</div>
`;

exports[`<SmartBarTab /> Should render for name 1`] = `
<div
  className="tabs__tab tabs__tab--has-items-2"
>
  <input
    checked={false}
    className="tab__input"
    disabled={false}
    id="Students"
    name="tabs2"
    onChange={[Function]}
    type="checkbox"
  />
  <React.Fragment>
    <label
      className="tab__label"
      htmlFor="Students"
    >
      Students
    </label>
    <label
      className="tab__for-label"
      htmlFor="Students"
    >
      for a user
    </label>
    <div
      className="tab__content"
    >
      <ul
        className="tab__list"
      >
        <li
          className="tab__list-item"
          key="1"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 1
          </div>
        </li>
        <li
          className="tab__list-item"
          key="2"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 2
          </div>
        </li>
      </ul>
    </div>
  </React.Fragment>
</div>
`;

exports[`<SmartBarTab /> when selectedItemId is empty 1`] = `
<div
  className="tabs__tab tabs__tab--has-items-2"
>
  <input
    checked={false}
    className="tab__input"
    disabled={false}
    id="Students"
    name="tabs2"
    onChange={[Function]}
    type="checkbox"
  />
  <React.Fragment>
    <label
      className="tab__label"
      htmlFor="Students"
    >
      Students
    </label>
    <div
      className="tab__content"
    >
      <ul
        className="tab__list"
      >
        <li
          className="tab__list-item"
          key="1"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 1
          </div>
        </li>
        <li
          className="tab__list-item"
          key="2"
        >
          <div
            className="tab__list-button"
            onClick={[Function]}
            role="button"
            tabIndex="-1"
          >
             
            Student 2
          </div>
        </li>
      </ul>
    </div>
  </React.Fragment>
</div>
`;
